starkc/tests/snapshots/gate4_bad_shape.stderr
Error: [E0212] tensor dimension mismatch at axis 2: expected `224` from literal dimension, found `100` from literal dimension
  --> examples/gate4/bad_shape.stark:8:49
   |
 8 |     incorrectly_resized: Tensor<Float32, [1, 3, 100, 100]>,
   |                                                 ^^^
   |
   = note: expected dimension originates at 2:40
   = note: found dimension originates at 8:49
   = note: corresponding model port declared at examples/gate4/bad_shape.stark:2:5
examples/gate4/bad_shape.stark: 1 error(s)
